Bug 157131 - CRASH: after pasting all and undoing
Summary: CRASH: after pasting all and undoing
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.2 rc
Hardware: All All
: medium critical
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: Undo-Redo Crash
  Show dependency treegraph
 
Reported: 2023-09-07 08:03 UTC by Xisco Faulí
Modified: 2023-10-02 15:56 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
gdb backtrace with 24.2 alpha0+ debug build on Ubuntu 20.04 (230.26 KB, text/x-log)
2023-09-07 08:27 UTC, Stéphane Guillou (stragu)
Details
bt with debug symbols (7.74 KB, text/plain)
2023-09-08 19:08 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-09-07 08:03:59 UTC
Steps to reproduce:
1. Open attachment 100963 [details] from bug 79970
2. Select all 2 times
3. Copy
4. Paste 3 times
5. Undo 3 times

-> Crash

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 13de5fc5396db63d4bd2f3e5fb4dc66c7ddd601f
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-09-07 08:04:45 UTC
Regression introduced by:

author	Michael Stahl <michael.stahl@allotropia.de>	2023-07-17 17:32:07 +0200
committer	Michael Stahl <michael.stahl@allotropia.de>	2023-07-17 19:33:41 +0200
commit faf2d9e2cb13c3750ac359338f8f31fc1afce368 (patch)
tree 15e18dcfd36d6a699abf932d4f3b57e7e6696cc3
parent 8362ec6646df330629b1c6c2e28b634487d55612 (diff)
sw: handle sequence of sections containing only table

Bisected with: bibisect-linux64-24.2

Adding Cc: to Michael Stahl
Comment 2 Stéphane Guillou (stragu) 2023-09-07 08:22:17 UTC
Repro in master build from today:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9a37652b79001bf5208841b9221dee851b9b6d0f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Also in:

Version: 7.6.1.1 (X86_64) / LibreOffice Community
Build ID: c7cda394c5de06de37d8109c310df89a4d4c3a98
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Earliest affected is 7.6.0.2 because of cherripick f8b5a12e7034f74fa5ea099634a1202d94e15e1e

Also crashes with gen/x11 VCL plugin.

Apport reports SIGSEGV in SwPageFrame::Cut()
Comment 3 Stéphane Guillou (stragu) 2023-09-07 08:27:42 UTC
Created attachment 189407 [details]
gdb backtrace with 24.2 alpha0+ debug build on Ubuntu 20.04

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 410632ac4b8a280e0993e665ffa9cfede8326b49
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: x11
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 4 Julien Nabet 2023-09-08 19:08:29 UTC
Created attachment 189439 [details]
bt with debug symbols

Here's a bt on pc Debian x86-64 with master sources updated today.
Comment 5 Commit Notification 2023-09-19 10:17:36 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/655874489a13af50b763b75c188b2a8db52c7fc0

tdf#157131 sw: only check for table in same top-level section

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2023-09-19 10:18:03 UTC
fixed on master
Comment 7 Commit Notification 2023-09-26 15:40:29 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/18ccdfc248fdc9d7f17f84c1067fee27a62b0772

tdf#157131 sw: only check for table in same top-level section

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Stéphane Guillou (stragu) 2023-09-29 13:03:07 UTC
Verified fix in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2902ab24ecc5ffbf4907ea83b2028508b9de6364
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Michael!
Comment 9 Commit Notification 2023-10-02 15:56:12 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/11943b9ab229c0d2faee6c9ca89792d70a3cfb6f

tdf#157131: sw_uiwriter3: Add unittest

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.