tdf#157131 sw: only check for table in same top-level section

The problem is that SwNodes::FindPrvNxtFrameNode() is called with the
first node in the body and moves backwards to a node that is in a table
in a text frame.

(regression from commit faf2d9e2cb13c3750ac359338f8f31fc1afce368)

Change-Id: I9bd353f07ea6361b332134186a6a4462119b597c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157045
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>